Resolves: tdf#153790 Suppress duplicated end part sheet reference, tdf#103890

Also keep explicitly given sheet reference relative to the same
sheet as user wished.

Affected only when moving formula cell position like with
cut&paste and drag&drop.

Change-Id: I6b1da6aea58b88a24567189ef6aa212dab01de49
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/151845
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Jenkins
(cherry picked from commit fcb66a74ae3af322b2829040bb84669d5c63e568)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/151782
Reviewed-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>